--- a/index1.html
+++ b/index1.html
@@ -16,6 +16,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@200&display=swap" rel="stylesheet">
 
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&family=Rubik+Puddles&display=swap" rel="stylesheet">
+
      <!--Link de css-->
      <link rel="stylesheet" href="./css/funkowb.css">
      <link rel="stylesheet" href="./css/config.css">
@@ -23,22 +28,12 @@
 
 </head>
 <body>
-
-    
- <div class="animado">
-    <img src="./img/XOsX.gif" alt="">
- </div>
-
-
-
-
-
-
 <!--INBORRABLE------------------------------------------------------------------->
 
     <div class="caja-pa"></div>
 
 
      <script src="./js/principal.js"></script>
+
 </body>
 </html>
