--- a/index.html
+++ b/index.html
@@ -15,20 +15,12 @@
     <link rel="stylesheet" href="./css/principio.css">
     <link rel="stylesheet" href="./css/css-boton.css">
 
+
 </head>
 <body>
 
-    <div class="contenedor">
-        <div class="inicio">
-            <h1>Funkoweb</h1>
-                <button>
-                  <a href="./indexHome.html">Ingresar</a>
-                </button>
-                
-          <center> <img src="./img/XOsX.gif" alt=""> </center>
-        </div>
-    </div>
-    
+    <div id="padre"></div>
+ 
 
     <script src="./js/principal.js"></script>
 </body>
