--- a/indexHome.html
+++ b/indexHome.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Welcome</title>
+
+    <!--Links de css-->
+    <link rel="stylesheet" href="./css/home/header.css">
+    <link rel="stylesheet" href="./css/config.css">
+    <link rel="stylesheet" href="./css/home/buscador.css">
+    <link rel="stylesheet" href="./css/home/boton-redes.css">
+    <link rel="stylesheet" href="./css/home/carrusel.css">
+
+    <!--Link de texto-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bacasime+Antique&family=Press+Start+2P&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    
+
+    <div id="header"></div>
+    <div id="caimg"></div>
+
+    <div id="logos"></div>
+
+    <script src="./js/homejs/elementos.js"></script>
 </body>
 </html>
