--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <!--Links de coneccion de css-->
     <link rel="stylesheet" href="./css/config.css">
-    <link rel="stylesheet" href="./css/principio.css">
-    <link rel="stylesheet" href="./css/css-boton.css">
+    <link rel="stylesheet" href="./css/principal/css-boton.css">
+    <link rel="stylesheet" href="/css/principal/principio.css">
 
 
 </head>
@@ -22,6 +22,6 @@
     <div id="padre"></div>
  
 
-    <script src="./js/principal.js"></script>
+    <script src="./js/js-principal/principal.js"></script>
 </body>
 </html>
