--- a/indexHome.html
+++ b/indexHome.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="./css/home/buscador.css">
     <link rel="stylesheet" href="./css/home/boton-redes.css">
     <link rel="stylesheet" href="./css/home/carrusel.css">
+    <link rel="stylesheet" href="./css/home/cubitos.css">
+    <link rel="stylesheet" href="./css/footer.css">
+    <link rel="stylesheet" href="./css/home/menu.css">
 
     <!--Link de texto-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,6 +28,23 @@
 
     <div id="logos"></div>
 
+    <footer id="pie">
+
+        
+
+    </footer>
+
+    <div class="fin">
+        <div class="cuadro1">
+           <h2>ADAL</h2>
+        
+        </div>
+        <div class="cuadro2"></div>
+      </div>
+
+
     <script src="./js/homejs/elementos.js"></script>
+    <script src="./js/homejs/primera-base.js"></script>
+    <script src="./js/footer.js"></script>
 </body>
 </html>
