--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--Links de coneccion de css-->
     <link rel="stylesheet" href="./css/config.css">
     <link rel="stylesheet" href="./css/principal/css-boton.css">
-    <link rel="stylesheet" href="/css/principal/principio.css">
+    <link rel="stylesheet" href="./css/principal/principio.css">
 
 
 </head>
